--- a/testApp/static/css/main.css
+++ b/testApp/static/css/main.css
@@ -208,6 +208,21 @@ label {
   display:none;
 }
 
+.login-flex {
+  display: flex;
+  flex-direction: column;
+  min-width: 100%;
+  justify-content: center;
+  align-content: center;
+}
+
+.login-wrapper {
+  margin: 20px;
+  padding: 20px;
+  justify-content: center;
+}
+
+
 /*------------------------------------------------------------------
 [ Form ]*/
 .text-center-forgot-password1{
