--- a/testApp/static/css/main.css
+++ b/testApp/static/css/main.css
@@ -212,14 +212,12 @@ label {
   display: flex;
   flex-direction: column;
   min-width: 100%;
-  justify-content: center;
-  align-content: center;
+  align-items: center;
 }
 
 .login-wrapper {
   margin: 20px;
   padding: 20px;
-  justify-content: center;
 }
 
 
