--- a/testApp/static/css/main.css
+++ b/testApp/static/css/main.css
@@ -301,6 +301,16 @@ label {
   padding: 0 5px 0 38px;
 }
 
+#login-loadpage-btn {
+  margin-top: 30px;
+  
+}
+
+#signup-loadpage-btn {
+  margin-top: 30px;
+
+}
+
 /*---------------------------------------------*/ 
 .focus-input100 {
   position: absolute;
