--- a/testApp/templates/load.html
+++ b/testApp/templates/load.html
@@ -2,12 +2,15 @@
 
 {% block login %}
 <div class="login-flex">
-    <a href="accounts/login" class="login100-form-btn" ><button type="button" id="login-loadpage-btn">
-        Log In
-    </button></a>
-    <a href="accounts/register" class="login100-form-btn"><button type="button" id="signup-loadpage-btn">
-        Sign Up
-    </button></a>
+    <div id="login-loadpage-btn>">
+        <a href="accounts/login" class="login100-form-btn" ><button type="button">
+            Log In
+        </button></a>
+        <a href="accounts/register" class="login100-form-btn"><button type="button">
+            Sign Up
+        </button></a>
+    </div>
+
 </div>
 
 {% endblock %}
